Add form for Cash on Delivery payment option

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
   </style>
 </head>
 <body>
+  <p>
+    <form action="https://formspree.io/f/xyzlgapg" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="text" name="address" placeholder="Delivery Address" required>
+  <input type="hidden" name="payment_method" value="Cash on Delivery">
+  <button type="submit">Cash on Delivery</button>
+</form>
+  </p>
 
   <img src="https://assets-jiocdn.ajio.com/medias/sys_master/root/20250707/4RtW/686bb6abe590ff066e29742a/-473Wx593H-443081640-black-MODEL.jpg"
     alt="good trouser"
