--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
         <img src="https://i.imgur.com/zr7oO2y.jpeg">
         <p>Phones</p>
     </div>
-<p>
+
     <div class="category-card" onclick="showCategory('fashion')">
-        <img src="https://i.imgur.com/OXQLoB8.jpeg">
-</p>
+       <p> <img src="https://i.imgur.com/OXQLoB8.jpeg"></p>
         <p>Fashion</p>
     </div>
 
