Update smartwatch image URL in index.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ const products = {
 };
 
 const suggested = [
-    {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/CN2k7P2.jpeg"},
+    {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/KNHZbZx.jpeg"},
 ];
 
 const recommend = [
