Add men's pants to suggested products

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ const products = {
 
 const suggested = [
     {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/KNHZbZx.jpeg"},
+    {name:"men pants", price:"Tsh13000", img:"https://i.imgur.com/KNHZbZx.jpeg"},
 ];
 
 const recommend = [
