--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ const products = {
 };
 
 const suggested = [
-    {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/KNHZbZx.jpeg"},
-    {name:"men pants", price:"Tsh13000", img:"blob:https://imgur.com/ffd7b023-25dc-440d-8cc1-5ace11b7c00f"},
+    {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/8LlYURV.jpeg"},
+    {name:"men pants", price:"Tsh13000", img:"https://i.imgur.com/8LlYURV.jpeg"},
 ];
 
 const recommend = [
