--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ const products = {
 };
 
 const suggested = [
-    {name:"Smartwatch", price:"$20", img:"https://i.imgur.com/8LlYURV.jpeg"},
+    {img:"https://i.imgur.com/8LlYURV.jpeg"},
     {name:"men pants", price:"Tsh13000", img:"https://raw.githubusercontent.com/jafarotto-001/Repo1/refs/heads/main/ear1.jpg"},
 ];
 
