--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@ const products = {
 };
 
 const suggested = [
-    {img:"https://i.imgur.com/8LlYURV.jpeg/400"},
+    <div class="image-box">
+    {img:"https://i.imgur.com/8LlYURV.jpe"},
+    </div>
+    <div class="detail-box">
+    <h3>product name</h3>
+    </div>
     {name:"men pants", price:"Tsh13000", img:"https://raw.githubusercontent.com/jafarotto-001/Repo1/refs/heads/main/ear1.jpg"},
 ];
 
